--- a/Natourus Project/index.html
+++ b/Natourus Project/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css"/>  
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css"/> 
     <title>Natourus</title>
 </head>
 <body>
-<header class="header"></header>
+<header class="header">
+    <div class="logo-box">
+    <img src="img/logo-white.png" alt="logo" class="logo">
+    </div>
+    <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">OUTDOORS</span>
+            <span class="heading-primary-sub">is where life happens</span>
+        </h1>
+    </div>
+    
+</header>
 </body>
 </html>
